fix: not returnig receipts

--- a/src/views/budget.ejs
+++ b/src/views/budget.ejs
@@ -183,7 +183,7 @@
             </h1>
         </div>
 
-        <% if(os.Receipts?.length> 0){ %>
+        <% if(os.Protocol?.Receipts?.length> 0){ %>
             <div class="line">
                 <h2>Valor pago:</h2>
                 <h1>
